fixed center alignemnt of noteworthy

--- a/src/sass/_general.scss
+++ b/src/sass/_general.scss
@@ -158,6 +158,8 @@ iframe {
     @include translate3d(0,-24%,0);
     @include transition(transform 150ms ease);
 
+    margin: 0 auto;
+
     &.open { 
         @include translate3d(0,-100%,0);
         h2:before { content:"-"; }
